# ecad_database_updater

./: .gitignore  Capacitor.xlsx  Cargo.toml  Connector.xlsx  Diode.xlsx  IC.xlsx  Inductor.xlsx  Mechanic.xlsx  Opto.xlsx  Other.xlsx  Resistor.xlsx  Transistor.xlsx  db_config.toml
logfiles/: missing_life_cycle.txt  new_part_names.txt
src/: database.rs  main.rs
src/export/: database.rs  export_to_database.rs  logfile.rs  mod.rs  new_part_name_description.rs  sap.rs
src/import/: cdb.rs  cdb_import.rs  import_from_cdb.rs  import_from_sap.rs  mod.rs  sap.rs  sap_import.rs
src/parts/: capacitor.rs  connector.rs  diode.rs  ic.rs  inductor.rs  mechanic.rs  mod.rs  opto.rs  other.rs  resistor.rs  transistor.rs
